--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flag: ^7.0.0
   get: ^4.6.6
   translator: ^1.0.3+1
+  sqflite: ^2.4.1
+  path: ^1.7.0
+  flutter_tts: ^4.2.0
 
 
 dev_dependencies:
@@ -64,7 +67,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/splash_logo.jpg
+    - assets/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
